          embedded subtitles and to set the autoload subtitle paths
 NEW    : LCN support for DVB
 NEW    : Added support for 'in24', 'fl64' and 8-bit 'sowt' audio
 NEW    : Added support for 'IMA4' audio
 NEW    : Added support for 'NONE' audio (old QuickTime PCM)
 NEW    : Added channel encryption detection for DVB-t during scan
 CHANGED: Updated FFmpeg
 CHANGED: Cleaned up and optimized code for QT PCM, small corrections in MP4Splitter
 CHANGED: Removed DSM Converter
 FIXED  : Ticket #564, EVR Sync enabled when it shouldn't be
 FIXED  : Ticket #651, Make EVR CP stats graph smaller
 FIXED  : Ticket #652, Escape key on certain form causes form to collapse
 FIXED  : Ticket #698, VMR-9 (Renderless) + pixel shaders crashes
 FIXED  : Ticket #699, fix EAC3 mediatype and string
 FIXED  : Ticket #724, Frequency range and bandwidth value are currently
          not taken into account when doing a scan
 FIXED  : Ticket #753, DVB-T, internal MPEG-2 filter & wrong aspect ratio
 FIXED  : Ticket #775, Default options of DVD/OGM Preferred language should be
          "Default" not "English"
 FIXED  : Ticket #776, Mouse pointer hovering over window/video should be normal,
          not hand


v1.4.2499.0 - 7 September 2010
==============================
 NEW    : Seamless playback support for multi files BRD
 NEW    : Support for Windows 7 taskbar and thumbnails features
 NEW    : Added Catalan, Dutch and Japanese translations
 NEW    : VSFilter x64 is available
 NEW    : Added internal VP8 Decoder
 NEW    : MPC-HC can be compiled with MSVC2010 and Intel C++ Compiler
 NEW    : Support for MCE remote control (values added in AppCommand column in
          "Options/Player/Keys")
 NEW    : Support of Broadcom Video decoder for VC1, H.264 and MPEG-2
          (hardware acceleration)
 NEW    : Support for DVB subtitles
 NEW    : Open files to Recent Documents
 NEW    : AUTO HDMI MODE 1080p/24 support for fullscreen mode
 NEW    : Ticket #46, add number to AudioDevice list